objects/NVMStatsSF__CDR_NVM__c.object
<CustomObject>
    <description>Contains event details from Inbound Calls and Cases.  This Table operates in 2 modes based on the Record Type - either as a landing table for imported CDRs or as a detail table if CDR explosion on - it is OFF by default</description>
    <fields>
        <fullName>NVMStatsSF__Applet_Name__c</fullName>
        <label>Applet Name</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__CDR_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NVM Call Summary</label>
        <referenceTo>NVMStatsSF__NVM_Call_Summary__c</referenceTo>
        <relationshipName>Call_Detail_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__CLID__c</fullName>
        <label>CLID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__CallGuid__c</fullName>
        <label>CallGuid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Data1__c</fullName>
        <label>Data1</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Data2__c</fullName>
        <label>Data2</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Data_TelNum__c</fullName>
        <label>TelNum</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Delete_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delete Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Duration__c</fullName>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Event__c</fullName>
        <label>Event</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__RingDuration__c</fullName>
        <label>RingDuration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Seq__c</fullName>
        <label>Seq</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Server__c</fullName>
        <label>Server</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Service_Name__c</fullName>
        <label>Service Name</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Service_Telephone_Number__c</fullName>
        <label>Service Telephone Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__State__c</fullName>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Time__c</fullName>
        <label>Time</label>
        <type>DateTime</type>
    </fields>
    <label>Call Event</label>
    <listViews>
        <fullName>NVMStatsSF__All</fullName>
        <columns>NAME</columns>
        <columns>NVMStatsSF__Time__c</columns>
        <columns>NVMStatsSF__CallGuid__c</columns>
        <columns>NVMStatsSF__Seq__c</columns>
        <columns>NVMStatsSF__Event__c</columns>
        <columns>NVMStatsSF__Description__c</columns>
        <columns>NVMStatsSF__Duration__c</columns>
        <columns>NVMStatsSF__CDR_Lookup__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>NVMStatsSF__Applet_Name__c</columns>
        <columns>NVMStatsSF__Data1__c</columns>
        <columns>NVMStatsSF__Data2__c</columns>
        <columns>NVMStatsSF__State__c</columns>
        <columns>NVMStatsSF__Data_TelNum__c</columns>
        <columns>NVMStatsSF__Service_Telephone_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CDR-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>